# bsd-api-kahoot

./: server.cpp
kahoot-client/: CMakeLists.txt  Makefile  kahoot-client.pro  mywidget.cpp  mywidget.h  mywidget.ui
kahoot-client/l6_z1/: mywidget.cpp  mywidget.h  mywidget.ui
